--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container-fluid">
         <div class="top">
             <div class="top-pic" style="background-image:url('img/bg.jpg')">
+                <img src="img/logo.png" alt="" class="img-responsive logo">
                 <div class="container col-md-8 col-md-offset-2 top-center">
                     <img src="img/circle.png" alt="" class="img-responsive top-circle">
                     <div class="top-text">農委會 - 機械搬運手臂</div>
